--- a/pom.xml
+++ b/pom.xml
@@ -1,8 +1,8 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
-	<groupId>org.springdoc</groupId>
+	<groupId>org.thingsboard</groupId>
 	<artifactId>springdoc-openapi</artifactId>
-	<version>2.4.0</version>
+	<version>2.4.0TB</version>
 	<packaging>pom</packaging>
 	<name>Spring openapi documentation</name>
 	<description>Spring openapi documentation</description>
@@ -21,6 +21,11 @@
 		</license>
 	</licenses>
 
+	<organization>
+		<name>ThingsBoard</name>
+		<url>https://thingsboard.io/</url>
+	</organization>
+
 	<developers>
 		<developer>
 			<name>Badr NASS LAHSEN</name>
@@ -28,23 +33,30 @@
 			<organization>springdoc</organization>
 			<organizationUrl>https://springdoc.org/</organizationUrl>
 		</developer>
+		<developer>
+			<id>ikulikov</id>
+			<name>Igor Kulikov</name>
+			<email>ikulikov@thingsboard.io</email>
+			<organization>ThingsBoard</organization>
+			<organizationUrl>https://thingsboard.io/</organizationUrl>
+		</developer>
 	</developers>
 
 	<scm>
-		<url>git@github.com:springdoc/springdoc-openapi.git</url>
-		<connection>scm:git:git@github.com:springdoc/springdoc-openapi.git</connection>
-		<developerConnection>scm:git:git@github.com:springdoc/springdoc-openapi.git
+		<url>git@github.com:thingsboard/springdoc-openapi.git</url>
+		<connection>scm:git:git@github.com:thingsboard/springdoc-openapi.git</connection>
+		<developerConnection>scm:git:git@github.com:thingsboard/springdoc-openapi.git
 		</developerConnection>
-		<tag>v2.4.0</tag>
+		<tag>v2.4.0TB</tag>
 	</scm>
 	<distributionManagement>
 		<snapshotRepository>
 			<id>ossrh</id>
-			<url>https://s01.oss.sonatype.org/content/repositories/snapshots</url>
+			<url>https://oss.sonatype.org/content/repositories/snapshots</url>
 		</snapshotRepository>
 		<repository>
 			<id>ossrh</id>
-			<url>https://s01.oss.sonatype.org/service/local/staging/deploy/maven2/</url>
+			<url>https://oss.sonatype.org/service/local/staging/deploy/maven2</url>
 		</repository>
 	</distributionManagement>
 
@@ -54,6 +66,7 @@
 		<module>springdoc-openapi-starter-webflux-api</module>
 		<module>springdoc-openapi-starter-webmvc-ui</module>
 		<module>springdoc-openapi-starter-webflux-ui</module>
+		<module>springdoc-swagger-ui</module>
 	</modules>
 
 	<properties>
@@ -61,7 +74,7 @@
 		<maven-release-plugin.version>2.5.3</maven-release-plugin.version>
 		<nexus-staging-maven-plugin>1.6.8</nexus-staging-maven-plugin>
 		<swagger-api.version>2.2.20</swagger-api.version>
-		<swagger-ui.version>5.11.8</swagger-ui.version>
+		<swagger-ui.version>5.12.0TB</swagger-ui.version>
 		<gmavenplus-plugin.version>1.13.1</gmavenplus-plugin.version>
 		<jaxb-impl.version>2.1</jaxb-impl.version>
 		<javax.jws-api.version>1.1</javax.jws-api.version>
@@ -78,12 +91,6 @@
 				<groupId>io.swagger.core.v3</groupId>
 				<artifactId>swagger-core-jakarta</artifactId>
 				<version>${swagger-api.version}</version>
-			</dependency>
-			<!-- swagger ui -->
-			<dependency>
-				<groupId>org.webjars</groupId>
-				<artifactId>swagger-ui</artifactId>
-				<version>${swagger-ui.version}</version>
 			</dependency>
 			<dependency>
 				<groupId>javax.xml</groupId>
@@ -125,28 +132,34 @@
 			</dependency>
 			<!-- SpringDoc -->
 			<dependency>
-				<groupId>org.springdoc</groupId>
+				<groupId>org.thingsboard</groupId>
 				<artifactId>springdoc-openapi-starter-common</artifactId>
 				<version>${project.version}</version>
 			</dependency>
 			<dependency>
-				<groupId>org.springdoc</groupId>
+				<groupId>org.thingsboard</groupId>
 				<artifactId>springdoc-openapi-starter-webmvc-api</artifactId>
 				<version>${project.version}</version>
 			</dependency>
 			<dependency>
-				<groupId>org.springdoc</groupId>
+				<groupId>org.thingsboard</groupId>
 				<artifactId>springdoc-openapi-starter-webflux-api</artifactId>
 				<version>${project.version}</version>
 			</dependency>
 			<dependency>
-				<groupId>org.springdoc</groupId>
+				<groupId>org.thingsboard</groupId>
 				<artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
 				<version>${project.version}</version>
 			</dependency>
 			<dependency>
-				<groupId>org.springdoc</groupId>
+				<groupId>org.thingsboard</groupId>
 				<artifactId>springdoc-openapi-starter-webflux-ui</artifactId>
+				<version>${project.version}</version>
+			</dependency>
+			<!-- swagger ui -->
+			<dependency>
+				<groupId>org.thingsboard</groupId>
+				<artifactId>springdoc-swagger-ui</artifactId>
 				<version>${project.version}</version>
 			</dependency>
 		</dependencies>
@@ -263,24 +276,6 @@
 								</goals>
 							</execution>
 						</executions>
-					</plugin>
-					<plugin>
-						<groupId>org.sonatype.plugins</groupId>
-						<artifactId>nexus-staging-maven-plugin</artifactId>
-						<version>${nexus-staging-maven-plugin}</version>
-						<extensions>true</extensions>
-						<configuration>
-							<serverId>ossrh</serverId>
-							<nexusUrl>https://s01.oss.sonatype.org/</nexusUrl>
-							<autoReleaseAfterClose>true</autoReleaseAfterClose>
-						</configuration>
-						<dependencies>
-							<dependency>
-								<groupId>com.thoughtworks.xstream</groupId>
-								<artifactId>xstream</artifactId>
-								<version>1.4.15</version>
-							</dependency>
-						</dependencies>
 					</plugin>
 					<plugin>
 						<artifactId>maven-release-plugin</artifactId>
