--- a/springdoc-openapi-starter-webflux-ui/pom.xml
+++ b/springdoc-openapi-starter-webflux-ui/pom.xml
@@ -1,22 +1,22 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
-		<groupId>org.springdoc</groupId>
+		<groupId>org.thingsboard</groupId>
 		<artifactId>springdoc-openapi</artifactId>
-		<version>2.4.0</version>
+		<version>2.4.0TB</version>
 	</parent>
 	<artifactId>springdoc-openapi-starter-webflux-ui</artifactId>
 	<dependencies>
 		<!-- springdoc-core -->
 		<dependency>
-			<groupId>org.springdoc</groupId>
+			<groupId>org.thingsboard</groupId>
 			<artifactId>springdoc-openapi-starter-webflux-api</artifactId>
 			<version>${project.version}</version>
 		</dependency>
 		<!-- swagger-ui dependencies -->
 		<dependency>
-			<groupId>org.webjars</groupId>
-			<artifactId>swagger-ui</artifactId>
+			<groupId>org.thingsboard</groupId>
+			<artifactId>springdoc-swagger-ui</artifactId>
 		</dependency>
 		<!-- Actuator dependencies -->
 		<dependency>
@@ -38,7 +38,7 @@
 				<configuration>
 					<archive>
 						<manifestEntries>
-							<Automatic-Module-Name>org.springdoc.openapi.webflux.ui
+							<Automatic-Module-Name>org.thingsboard.openapi.webflux.ui
 							</Automatic-Module-Name>
 						</manifestEntries>
 					</archive>
