--- a/springdoc-openapi-starter-webmvc-api/pom.xml
+++ b/springdoc-openapi-starter-webmvc-api/pom.xml
@@ -1,15 +1,15 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
-		<groupId>org.springdoc</groupId>
+		<groupId>org.thingsboard</groupId>
 		<artifactId>springdoc-openapi</artifactId>
-		<version>2.4.0</version>
+		<version>2.4.0TB</version>
 	</parent>
 	<artifactId>springdoc-openapi-starter-webmvc-api</artifactId>
 	<dependencies>
 		<!-- springdoc-common -->
 		<dependency>
-			<groupId>org.springdoc</groupId>
+			<groupId>org.thingsboard</groupId>
 			<artifactId>springdoc-openapi-starter-common</artifactId>
 			<version>${project.version}</version>
 		</dependency>
@@ -47,7 +47,7 @@
 				<configuration>
 					<archive>
 						<manifestEntries>
-							<Automatic-Module-Name>org.springdoc.openapi.webmvc.core
+							<Automatic-Module-Name>org.thingsboard.openapi.webmvc.core
 							</Automatic-Module-Name>
 						</manifestEntries>
 					</archive>
