--- a/springdoc-openapi-starter-webmvc-ui/pom.xml
+++ b/springdoc-openapi-starter-webmvc-ui/pom.xml
@@ -1,15 +1,15 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
-		<groupId>org.springdoc</groupId>
+		<groupId>org.thingsboard</groupId>
 		<artifactId>springdoc-openapi</artifactId>
-		<version>2.4.0</version>
+		<version>2.4.0TB</version>
 	</parent>
 	<artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
 	<dependencies>
 		<!-- springdoc-core -->
 		<dependency>
-			<groupId>org.springdoc</groupId>
+			<groupId>org.thingsboard</groupId>
 			<artifactId>springdoc-openapi-starter-webmvc-api</artifactId>
 			<version>${project.version}</version>
 		</dependency>
@@ -20,8 +20,8 @@
 		</dependency>
 		<!-- swagger-ui dependencies -->
 		<dependency>
-			<groupId>org.webjars</groupId>
-			<artifactId>swagger-ui</artifactId>
+			<groupId>org.thingsboard</groupId>
+			<artifactId>springdoc-swagger-ui</artifactId>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
@@ -48,7 +48,7 @@
 				<configuration>
 					<archive>
 						<manifestEntries>
-							<Automatic-Module-Name>org.springdoc.openapi.ui
+							<Automatic-Module-Name>org.thingsboard.openapi.ui
 							</Automatic-Module-Name>
 						</manifestEntries>
 					</archive>
