--- a/springdoc-openapi-tests/springdoc-openapi-kotlin-webflux-tests/pom.xml
+++ b/springdoc-openapi-tests/springdoc-openapi-kotlin-webflux-tests/pom.xml
@@ -1,8 +1,8 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<parent>
 		<artifactId>springdoc-openapi-tests</artifactId>
-		<groupId>org.springdoc</groupId>
-		<version>2.4.0</version>
+		<groupId>org.thingsboard</groupId>
+		<version>2.4.0TB</version>
 	</parent>
 	<modelVersion>4.0.0</modelVersion>
 	<artifactId>springdoc-openapi-kotlin-webflux-tests</artifactId>
@@ -24,7 +24,7 @@
 			<scope>test</scope>
 		</dependency>
 		<dependency>
-			<groupId>org.springdoc</groupId>
+			<groupId>org.thingsboard</groupId>
 			<artifactId>springdoc-openapi-starter-webflux-api</artifactId>
 			<version>${project.version}</version>
 			<scope>test</scope>
