--- a/pom.xml
+++ b/pom.xml
@@ -2,7 +2,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>org.thingsboard</groupId>
 	<artifactId>springdoc-openapi</artifactId>
-	<version>2.4.0TB</version>
+	<version>2.8.8</version>
 	<packaging>pom</packaging>
 	<name>Spring openapi documentation</name>
 	<description>Spring openapi documentation</description>
@@ -47,7 +47,7 @@
 		<connection>scm:git:git@github.com:thingsboard/springdoc-openapi.git</connection>
 		<developerConnection>scm:git:git@github.com:thingsboard/springdoc-openapi.git
 		</developerConnection>
-		<tag>v2.4.0TB</tag>
+		<tag>v2.8.8</tag>
 	</scm>
 	<distributionManagement>
 		<snapshotRepository>
