--- a/springdoc-openapi-bom/pom.xml
+++ b/springdoc-openapi-bom/pom.xml
@@ -3,7 +3,7 @@
 	<parent>
 		<groupId>org.thingsboard</groupId>
 		<artifactId>springdoc-openapi</artifactId>
-		<version>2.8.8</version>
+		<version>2.8.8TB</version>
 	</parent>
 	<artifactId>springdoc-openapi-bom</artifactId>
 	<packaging>pom</packaging>
