--- a/springdoc-openapi-tests/springdoc-openapi-groovy-tests/pom.xml
+++ b/springdoc-openapi-tests/springdoc-openapi-groovy-tests/pom.xml
@@ -3,7 +3,7 @@
 	<parent>
 		<groupId>org.thingsboard</groupId>
 		<artifactId>springdoc-openapi-tests</artifactId>
-		<version>2.8.8</version>
+		<version>2.8.8TB</version>
 	</parent>
 	<artifactId>springdoc-openapi-groovy-tests</artifactId>
 	<dependencies>
