--- a/springdoc-openapi-tests/springdoc-openapi-javadoc-tests/pom.xml
+++ b/springdoc-openapi-tests/springdoc-openapi-javadoc-tests/pom.xml
@@ -2,7 +2,7 @@
 	<parent>
 		<groupId>org.thingsboard</groupId>
 		<artifactId>springdoc-openapi-tests</artifactId>
-		<version>2.8.8</version>
+		<version>2.8.8TB</version>
 	</parent>
 	<modelVersion>4.0.0</modelVersion>
 
